fixed task card not align

--- a/frontend/src/components/CardList/components/Cards/TaskCard/TaskCard.css
+++ b/frontend/src/components/CardList/components/Cards/TaskCard/TaskCard.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    justify-content: space-between;
     text-transform: capitalize;
     text-decoration: none;
     color: black;
@@ -12,10 +13,15 @@
 
 .task-card-header{
     display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+}
+
+.task-card-header-details{
+    display: flex;
     flex-direction: row;
     align-items: center;
     gap: 0.5rem;
-    margin-top: -0.5rem;
     /* padding: 0.5rem 0; */
 }
 
@@ -41,8 +47,8 @@
 }
 
 .task-card-title{
-    margin-top: -0.5rem;
     font-size: 1.1em;
+    margin-top: -0.5rem;
 }
 
 .task-card-clock{
